# yannpp

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/: CMakeLists.txt  run_all.sh
src/common/: array3d.h  array3d_math.cpp  array3d_math.h  cpphelpers.cpp  cpphelpers.h  log.cpp  log.h  shape.h  utils.cpp  utils.h
src/examples/: convolution.cpp  mnist_deeplearning.cpp  mnist_fc_network.cpp  mnist_simple.cpp
src/examples/mnist/: CMakeLists.txt  mnist_deeplearning.cpp  mnist_fc_network.cpp  mnist_simple.cpp
src/examples/mnist/parsing/: bmp_image.h  mnist_dataset.cpp  mnist_dataset.h  parse_test.cpp  parsed_images.cpp  parsed_images.h  parsed_labels.cpp  parsed_labels.h  test_parsing.sh
src/examples/simple/: CMakeLists.txt  convolution.cpp  pooling.cpp  tf_dense.cpp
src/layers/: convolutionlayer.h  crossentropyoutputlayer.h  fullyconnectedlayer.h  layer_base.h  poolinglayer.h
src/network/: activator.h  network1.h  network2.cpp  network2.h
src/optimizer/: optimizer.h  sdg_optimizer.h
src/parsing/: bmp_image.cpp  mnist_dataset.cpp  mnist_dataset.h  parsed_images.cpp  parsed_images.h  parsed_labels.cpp  parsed_labels.h
src/tests/: CMakeLists.txt  tests_convolution.cpp  tests_main.cpp  tests_mnist.cpp
src/yannpp/: CMakeLists.txt
src/yannpp/common/: array3d.h  array3d_math.h  cpphelpers.cpp  cpphelpers.h  log.cpp  log.h  shape.h  utils.cpp  utils.h
src/yannpp/layers/: convolutionlayer.h  crossentropyoutputlayer.h  fullyconnectedlayer.h  layer_base.h  layer_metadata.h  poolinglayer.h
src/yannpp/network/: activator.h  network1.cpp  network1.h  network2.h
src/yannpp/optimizer/: optimizer.h  sdg_optimizer.h
